--- a/form.ui
+++ b/form.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>623</height>
+    <height>723</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -41,7 +41,7 @@
           </property>
           <layout class="QHBoxLayout" name="connectionLayout">
            <property name="sizeConstraint">
-            <enum>QLayout::SetMinAndMaxSize</enum>
+            <enum>QLayout::SizeConstraint::SetMinAndMaxSize</enum>
            </property>
            <item>
             <widget class="QFrame" name="Detect">
@@ -53,7 +53,7 @@
              </property>
              <layout class="QHBoxLayout" name="detectionLayout" stretch="0,0">
               <property name="sizeConstraint">
-               <enum>QLayout::SetMinAndMaxSize</enum>
+               <enum>QLayout::SizeConstraint::SetMinAndMaxSize</enum>
               </property>
               <item>
                <widget class="QLabel" name="statusIndicatorLabel">
@@ -128,10 +128,10 @@
            <string>Make sure you wrote correct PIN code!</string>
           </property>
           <property name="textFormat">
-           <enum>Qt::RichText</enum>
+           <enum>Qt::TextFormat::RichText</enum>
           </property>
           <property name="alignment">
-           <set>Qt::AlignCenter</set>
+           <set>Qt::AlignmentFlag::AlignCenter</set>
           </property>
          </widget>
         </item>
@@ -147,7 +147,7 @@
            <string>StiCAN will not verify PIN code.</string>
           </property>
           <property name="alignment">
-           <set>Qt::AlignCenter</set>
+           <set>Qt::AlignmentFlag::AlignCenter</set>
           </property>
          </widget>
         </item>
@@ -213,10 +213,10 @@
         <item>
          <widget class="QFrame" name="UserConfigureValidation">
           <property name="frameShape">
-           <enum>QFrame::StyledPanel</enum>
+           <enum>QFrame::Shape::StyledPanel</enum>
           </property>
           <property name="frameShadow">
-           <enum>QFrame::Raised</enum>
+           <enum>QFrame::Shadow::Raised</enum>
           </property>
          </widget>
         </item>
@@ -304,10 +304,10 @@ li.checked::marker { content: &quot;\2612&quot;; }
            </size>
           </property>
           <property name="frameShape">
-           <enum>QFrame::StyledPanel</enum>
+           <enum>QFrame::Shape::StyledPanel</enum>
           </property>
           <property name="frameShadow">
-           <enum>QFrame::Raised</enum>
+           <enum>QFrame::Shadow::Raised</enum>
           </property>
           <widget class="QPushButton" name="advSaveLog">
            <property name="geometry">
@@ -348,10 +348,10 @@ li.checked::marker { content: &quot;\2612&quot;; }
              </size>
             </property>
             <property name="frameShape">
-             <enum>QFrame::StyledPanel</enum>
+             <enum>QFrame::Shape::StyledPanel</enum>
             </property>
             <property name="frameShadow">
-             <enum>QFrame::Raised</enum>
+             <enum>QFrame::Shadow::Raised</enum>
             </property>
             <widget class="QPushButton" name="EN_Button">
              <property name="geometry">
