add button for perm connection to debug

--- a/form.ui
+++ b/form.ui
@@ -293,6 +293,13 @@ li.checked::marker { content: &quot;\2612&quot;; }
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QPushButton" name="advConnDbgCommand">
+            <property name="text">
+             <string>Connect</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item>
